apps/production/media/bazarr/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bazarr
spec:
  serviceName: bazarr
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
        - name: bazarr
          image: registry-proxy.local.hejsan.xyz/linuxserver/bazarr:v1.4.4-ls268
          ports:
            - containerPort: 6767
              name: http
          volumeMounts:
            - name: bazarr-config-pvc
              mountPath: /config
            - name: shared-storage
              mountPath: /mnt/storage
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: shared-nfs-pvc
  volumeClaimTemplates:
    - metadata:
        name: bazarr-config-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: app-nfs-storage
        resources:
          requests:
            storage: 10Gi
