apps/production/media/bazarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bazarr.local.hejsan.xyz`)
      kind: Rule
      services:
        - name: bazarr
          port: http

  tls:
    secretName: local-hejsan-xyz-tls
